src/test/ui/codemap_tests/tab_2.stderr
error: unterminated double quote string
  --> $DIR/tab_2.rs:14:7
   |
14 |       """;
   |  _______^
15 | | }
   | |__^

error: aborting due to previous error

